--- a/assets/css/templates/home.css
+++ b/assets/css/templates/home.css
@@ -2,5 +2,9 @@
   .menu-toggle.toggle.pseudo-list-item {
     padding-left: 30px;
     width: auto;
+    background: transparent;
+  }
+  .audio-button {
+    mix-blend-mode: multiply;
   }
 }
